// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertiesList highlights requested text 1`] = `
<div
  className="m-properties-list"
>
  <table
    className="m-properties-list__table"
  >
    <tbody>
      <tr
        className="m-properties-list__property--run"
      >
        <td
          className="m-properties-list__property-label"
        >
          Run
        </td>
        <td
          className="m-properties-list__property-value"
        >
          
          <span
            className="highlighted"
          >
            run
          </span>
          -1
        </td>
      </tr>
      <tr
        className="m-properties-list__property--vehicle"
      >
        <td
          className="m-properties-list__property-label"
        >
          Vehicle
        </td>
        <td
          className="m-properties-list__property-value"
        >
          v1-label
        </td>
      </tr>
      <tr
        className="m-properties-list__property--operator"
      >
        <td
          className="m-properties-list__property-label"
        >
          Operator
        </td>
        <td
          className="m-properties-list__property-value"
        >
          SMITH #op1
        </td>
      </tr>
      <tr
        className="m-properties-list__property--last-login"
      >
        <td
          className="m-properties-list__property-label"
        >
          Last Login
        </td>
        <td
          className="m-properties-list__property-value"
        >
          4h 3m; 1:38pm
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PropertiesList renders a properties list for a ghost 1`] = `
<div
  className="m-properties-list"
>
  <table
    className="m-properties-list__table"
  >
    <tbody>
      <tr
        className="m-properties-list__property--run"
      >
        <td
          className="m-properties-list__property-label"
        >
          Run
        </td>
        <td
          className="m-properties-list__property-value"
        >
          123-0123
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PropertiesList renders a properties list for a vehicle 1`] = `
<div
  className="m-properties-list"
>
  <table
    className="m-properties-list__table"
  >
    <tbody>
      <tr
        className="m-properties-list__property--run"
      >
        <td
          className="m-properties-list__property-label"
        >
          Run
        </td>
        <td
          className="m-properties-list__property-value"
        >
          run-1
        </td>
      </tr>
      <tr
        className="m-properties-list__property--vehicle"
      >
        <td
          className="m-properties-list__property-label"
        >
          Vehicle
        </td>
        <td
          className="m-properties-list__property-value"
        >
          v1-label
        </td>
      </tr>
      <tr
        className="m-properties-list__property--operator"
      >
        <td
          className="m-properties-list__property-label"
        >
          Operator
        </td>
        <td
          className="m-properties-list__property-value"
        >
          SMITH #op1
        </td>
      </tr>
      <tr
        className="m-properties-list__property--last-login"
      >
        <td
          className="m-properties-list__property-label"
        >
          Last Login
        </td>
        <td
          className="m-properties-list__property-value"
        >
          4h 3m; 1:38pm
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PropertiesList reports 'Not Available' if missing a login time 1`] = `
<div
  className="m-properties-list"
>
  <table
    className="m-properties-list__table"
  >
    <tbody>
      <tr
        className="m-properties-list__property--run"
      >
        <td
          className="m-properties-list__property-label"
        >
          Run
        </td>
        <td
          className="m-properties-list__property-value"
        >
          run-1
        </td>
      </tr>
      <tr
        className="m-properties-list__property--vehicle"
      >
        <td
          className="m-properties-list__property-label"
        >
          Vehicle
        </td>
        <td
          className="m-properties-list__property-value"
        >
          v1-label
        </td>
      </tr>
      <tr
        className="m-properties-list__property--operator"
      >
        <td
          className="m-properties-list__property-label"
        >
          Operator
        </td>
        <td
          className="m-properties-list__property-value"
        >
          SMITH #op1
        </td>
      </tr>
      <tr
        className="m-properties-list__property--last-login"
      >
        <td
          className="m-properties-list__property-label"
        >
          Last Login
        </td>
        <td
          className="m-properties-list__property-value"
        >
          Not Available
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
